--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.25",
     "axios": "^0.26.1",
+    "dotenv": "^16.3.1",
     "express": "^4.17.3",
     "immer": "^9.0.14",
     "jsonwebtoken": "^8.5.1",
