trying to fix dependency issue that breaks build

--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "sass": "^1.68.0",
     "swr": "^2.2.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
