adds no-explicit-any to eslint config

--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
   },
   "eslintConfig": {
     "rules": {
-      "no-console": "warn"
+      "no-console": "warn",
+      "@typescript-eslint/no-explicit-any": "warn"
     },
     "extends": [
       "react-app",
